Actions
Bug #10740
closedudfs: NULL pointer errors
Start date:
2019-04-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/fs/udfs/udf_subr.c: In function 'ud_uncompress': ../../common/fs/udfs/udf_subr.c:1743:16: error: comparison between pointer and integer [-Werror] (w2_char == NULL)) { ^~ ../../common/fs/udfs/udf_vnops.c: In function 'udf_symlink': ../../common/fs/udfs/udf_vnops.c:1305:18: error: comparison between pointer and integer [-Werror] while (*target != NULL) { ^~ ../../common/fs/udfs/udf_vnops.c:1350:16: error: comparison between pointer and integer [-Werror] if (*target == NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 060425259041d96430b4b9497b0800baf07821ce
commit 060425259041d96430b4b9497b0800baf07821ce Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T22:13:54.000Z 10740 udfs: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions