usr/src/uts/common/fs/udfs/udf_vnops.c
@@ -1302,7 +1302,7 @@ udf_symlink(
 			}
 		}
 
-		while (*target != NULL) {
+		while (*target != '\0') {
 			sp = target;
 			while ((*target != '/') && (*target != '\0')) {
 				target ++;
@@ -1347,7 +1347,7 @@ udf_symlink(
 			while (*target == '/') {
 				target++;
 			}
-			if (*target == NULL) {
+			if (*target == '\0') {
 				break;
 			}
 		}
@@ -2099,16 +2099,9 @@ end:
 
 /* ARGSUSED */
 static int32_t
-udf_addmap(struct vnode *vp,
-	offset_t off,
-	struct as *as,
-	caddr_t addr,
-	size_t len,
-	uint8_t prot,
-	uint8_t maxprot,
-	uint32_t flags,
-	struct cred *cr,
-	caller_context_t *ct)
+udf_addmap(struct vnode *vp, offset_t off, struct as *as, caddr_t addr,
+    size_t len, uint8_t prot, uint8_t maxprot, uint32_t flags,
+    struct cred *cr, caller_context_t *ct)
 {
 	struct ud_inode *ip = VTOI(vp);
 
@@ -2127,16 +2120,9 @@ udf_addmap(struct vnode *vp,
 
 /* ARGSUSED */
 static int32_t
-udf_delmap(
-	struct vnode *vp, offset_t off,
-	struct as *as,
-	caddr_t addr,
-	size_t len,
-	uint32_t prot,
-	uint32_t maxprot,
-	uint32_t flags,
-	struct cred *cr,
-	caller_context_t *ct)
+udf_delmap(struct vnode *vp, offset_t off, struct as *as, caddr_t addr,
+    size_t len, uint32_t prot, uint32_t maxprot, uint32_t flags,
+    struct cred *cr, caller_context_t *ct)
 {
 	struct ud_inode *ip = VTOI(vp);
 
@@ -2147,7 +2133,7 @@ udf_delmap(
 	}
 
 	mutex_enter(&ip->i_tlock);
-	ip->i_mapcnt -= btopr(len); 	/* Count released mappings */
+	ip->i_mapcnt -= btopr(len);	/* Count released mappings */
 	ASSERT(ip->i_mapcnt >= 0);
 	mutex_exit(&ip->i_tlock);
 
@@ -2156,12 +2142,8 @@ udf_delmap(
 
 /* ARGSUSED */
 static int32_t
-udf_l_pathconf(
-	struct vnode *vp,
-	int32_t cmd,
-	ulong_t *valp,
-	struct cred *cr,
-	caller_context_t *ct)
+udf_l_pathconf(struct vnode *vp, int32_t cmd, ulong_t *valp, struct cred *cr,
+    caller_context_t *ct)
 {
 	int32_t error = 0;
 
@@ -2357,9 +2339,9 @@ udf_pageio(
 
 
 int32_t
-ud_rdwri(enum uio_rw rw, int32_t ioflag,
-	struct ud_inode *ip, caddr_t base, int32_t len,
-	offset_t offset, enum uio_seg seg, int32_t *aresid, struct cred *cr)
+ud_rdwri(enum uio_rw rw, int32_t ioflag, struct ud_inode *ip, caddr_t base,
+    int32_t len, offset_t offset, enum uio_seg seg, int32_t *aresid,
+    struct cred *cr)
 {
 	int32_t error;
 	struct uio auio;
@@ -2408,9 +2390,8 @@ int32_t ud_smallfile = 32 * 1024;
 
 /* ARGSUSED */
 int32_t
-ud_getpage_miss(struct vnode *vp, u_offset_t off,
-	size_t len, struct seg *seg, caddr_t addr, page_t *pl[],
-	size_t plsz, enum seg_rw rw, int32_t seq)
+ud_getpage_miss(struct vnode *vp, u_offset_t off, size_t len, struct seg *seg,
+    caddr_t addr, page_t *pl[], size_t plsz, enum seg_rw rw, int32_t seq)
 {
 	struct ud_inode *ip = VTOI(vp);
 	int32_t err = 0;
@@ -2474,8 +2455,7 @@ outmiss:
 
 /* ARGSUSED */
 void
-ud_getpage_ra(struct vnode *vp,
-	u_offset_t off, struct seg *seg, caddr_t addr)
+ud_getpage_ra(struct vnode *vp, u_offset_t off, struct seg *seg, caddr_t addr)
 {
 	page_t *pp;
 	size_t io_len;
@@ -2516,8 +2496,8 @@ ud_getpage_ra(struct vnode *vp,
 }
 
 int
-ud_page_fill(struct ud_inode *ip, page_t *pp, u_offset_t off,
-	uint32_t bflgs, u_offset_t *pg_off)
+ud_page_fill(struct ud_inode *ip, page_t *pp, u_offset_t off, uint32_t bflgs,
+    u_offset_t *pg_off)
 {
 	daddr_t bn;
 	struct buf *bp;
@@ -2652,8 +2632,8 @@ out:
 }
 
 int32_t
-ud_putpages(struct vnode *vp, offset_t off,
-	size_t len, int32_t flags, struct cred *cr)
+ud_putpages(struct vnode *vp, offset_t off, size_t len, int32_t flags,
+    struct cred *cr)
 {
 	struct ud_inode *ip;
 	page_t *pp;
@@ -2775,9 +2755,8 @@ ud_putpages(struct vnode *vp, offset_t off,
 
 /* ARGSUSED */
 int32_t
-ud_putapage(struct vnode *vp,
-	page_t *pp, u_offset_t *offp,
-	size_t *lenp, int32_t flags, struct cred *cr)
+ud_putapage(struct vnode *vp, page_t *pp, u_offset_t *offp,
+    size_t *lenp, int32_t flags, struct cred *cr)
 {
 	daddr_t bn;
 	size_t io_len;
@@ -3443,7 +3422,7 @@ out:
 
 int32_t
 ud_multi_strat(struct ud_inode *ip,
-	page_t *pp, struct buf *bp, u_offset_t start)
+    page_t *pp, struct buf *bp, u_offset_t start)
 {
 	daddr_t bn;
 	int32_t error = 0, io_count, contig, alloc_sz, i;
